--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\nsuma\AppData\Local\Temp\testng-eclipse-1833399141\testng-customsuite.xml</span>
+                    <span>C:\Users\nsuma\AppData\Local\Temp\testng-eclipse-1419427120\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,26 +93,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">2 methods, 2 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content failed suite-Default_suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.FailedTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testRunner.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">runScenario("User verify product in landing page", "Verifying and Selecting Product")</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testRunner.FailedTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -124,38 +124,60 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">testRunner.TestNGTestRunner</span>
+              <img src="failed.png"/>
+              <span class="class-name">testRunner.FailedTestRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">
-                  </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
+                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
+                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("User verify product in landing page", "Verifying and Selecting Product")</span>
+                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [null] but found [Tomato]
+	at org.testng.Assert.fail(Assert.java:110)
+	at org.testng.Assert.failNotEquals(Assert.java:1413)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
+	at org.testng.Assert.assertEquals(Assert.java:131)
+	at org.testng.Assert.assertEquals(Assert.java:655)
+	at org.testng.Assert.assertEquals(Assert.java:665)
+	at stepDefinitions.OfferStepDef.user_check_if_the_product_exists(OfferStepDef.java:68)
+	at ✽.User check if the product exists Tom(file:///C:/Users/nsuma/OneDrive/Desktop/Selenium%20Workspace/Cucumber/src/test/java/Feature/Offer.feature:12)
+
+</div> <!-- stack-trace -->
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;User verify product in landing page&quot;, &quot;Verifying and Selecting Product&quot;)">
-                  </a> <!-- runScenario("User verify product in landing page", "Verifying and Selecting Product") -->
+                  <a name="runScenario(&quot;Verify product in offerpage&quot;, &quot;Verifying Product in OfferPage&quot;)">
+                  </a> <!-- runScenario("Verify product in offerpage", "Verifying Product in OfferPage") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("User verify product in landing page", "Verifying and Selecting Product")</span>
+                  <span class="parameters">("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [null] but found [No data]
+	at org.testng.Assert.fail(Assert.java:110)
+	at org.testng.Assert.failNotEquals(Assert.java:1413)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
+	at org.testng.Assert.assertEquals(Assert.java:131)
+	at org.testng.Assert.assertEquals(Assert.java:655)
+	at org.testng.Assert.assertEquals(Assert.java:665)
+	at stepDefinitions.OfferStepDef.user_check_if_the_product_exists(OfferStepDef.java:68)
+	at ✽.User check if the product exists Beet(file:///C:/Users/nsuma/OneDrive/Desktop/Selenium%20Workspace/Cucumber/src/test/java/Feature/Offer.feature:12)
+
+</div> <!-- stack-trace -->
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
+          </div> <!-- suite-Default_suite-class-failed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nsuma\AppData\Local\Temp\testng-eclipse-1833399141\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\nsuma\AppData\Local\Temp\testng-eclipse-1419427120\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -164,7 +186,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testRunner.TestNGTestRunner&quot;/&gt;
+      &lt;class name=&quot;testRunner.FailedTestRunner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -215,17 +237,17 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'testRunner.TestNGTestRunner')
-data.setCell(0, 3, 6858);
+data.setCell(0, 2, 'testRunner.FailedTestRunner')
+data.setCell(0, 3, 18940);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'testRunner.TestNGTestRunner')
-data.setCell(1, 3, 6858);
+data.setCell(1, 2, 'testRunner.FailedTestRunner')
+data.setCell(1, 3, 16968);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,22 +273,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testRunner.TestNGTestRunner</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testRunner.FailedTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@3f446bef)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@5203c80f)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">307 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                <span class="method-start">557 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">runScenario("User verify product in landing page", "Verifying and Selecting Product")</span>
-                <span class="method-start">307 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("Verify product in offerpage", "Verifying Product in OfferPage")</span>
+                <span class="method-start">19500 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">7165 ms</span>
+                <span class="method-start">36471 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
